# Quant-Deepagent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  inspect_deepagents.py  pyproject.toml
data/phoenix/: phoenix.db-shm
scripts/: cli.py  demo_agent.py  linear_research.py  verify_all_tools.py  verify_apple_analysis.py  verify_connectivity.py  verify_forecast.py  verify_forecast_comprehensive.py  verify_full_system.py  verify_full_trace.py  verify_fundamentals.py  verify_fundamentals_comprehensive.py  verify_fundamentals_queries.py  verify_integrity.py  verify_lmstudio.py  verify_mcp_capabilities.py  verify_mcp_raw.py  verify_mcp_standalone.py  verify_minimal.py  verify_observability.py  verify_phoenix_trace.py  verify_planning.py  verify_planning_direct.py  verify_sentiment.py  verify_sentiment_comprehensive.py  verify_simple.py  verify_system_strict.py  verify_workflow_manual.py
src/: config.py  main.py
src/agents/: coordinator.py  graph.py  state.py  tools.py  tools_registry.py
src/agents/prompts/: critique_prompt.py  forecast_prompt.py  fundamentals_prompt.py  main_prompt.py  (+1 more)
src/llm/: router.py
src/mcp_servers/: forecast.py  fred.py  sentiment.py  template.py  yahoo_finance.py
src/rag/: chunking.py  embeddings.py  ingestion.py  retriever.py  vectorstore.py
src/utils/: cache.py  logging.py  mcp_client.py  observability.py  retry.py  tracing.py
tests/: test_mcp_integration.py
tests/integration/: test_research_flow.py
tests/unit/: test_forecast.py  test_llm_router.py  test_rag.py  test_sentiment.py  test_tools.py
(+24 files in other folders)
